usteventfeed now summiteventsfeed

--- a/force-app/main/default/classes/SummitEventsFeed.cls
+++ b/force-app/main/default/classes/SummitEventsFeed.cls
@@ -3,7 +3,7 @@
 // license that can be found in the LICENSE file.
 // Created by Thaddaeus Dahlberg on 8/09/2018.
 
-@RestResource(urlMapping='/usteventfeed/*')
+@RestResource(urlMapping='/summiteventsfeed/*')
 
 global with sharing class SummitEventsFeed {
 
